Removed again GwtSession from the ShiroSession, added info to the KapuaSession, added field to distinguish user initiated logout in session
Signed-off-by: Gianluca Barbon <gianluca.barbon@eurotech.com>